--- a/AI/src/main/resources/application.yaml
+++ b/AI/src/main/resources/application.yaml
@@ -1,5 +1,11 @@
 spring:
   application:
-    name: AI
-#groq.api.key=${GROQ_API_KEY} musia?em zakomnetowa? bo nie mam klucza
+    name: ai-module
+  cloud:
+    discovery:
+      enabled: true
+  config:
+    import: "configserver:http://host.docker.internal:8888"
+server:
+  port: 3004
 
